hphp/hack/test/typecheck/is_expression/tuple3.php
<?hh // partial

function g((int, int, string) $x) {}

function f(mixed $x) {
  if ($x is (int, string)) {
    g($x);
  }
}
